--- a/semantics/todo.txt
+++ b/semantics/todo.txt
@@ -1,6 +1,7 @@
-- global variables (needs global register cell, perhaps different looks)
 - varargs (how to pass them, etc)
 - floats
 - structs constants
 - pointer comparisons
 - zeroinitializer
+- global variables can reference other globals that haven't been defined yet
+- looks like Typedef can have more than two things in it (strct-pack-1.ll)
