Make the size of the dragon independent of the text width.

--- a/semantics/latex/topmatter.tex
+++ b/semantics/latex/topmatter.tex
@@ -8,7 +8,7 @@
 \setlength{\parindent}{8em}
 % FIXME use dragon-vector.pdf for printing/high-quality
 % some versions of acrobat reader break when using the vector :\
-\includegraphics[width=0.14\textwidth]{latex/dragon.pdf}
+\includegraphics[scale=0.27]{latex/dragon.pdf}
 \setlength{\parindent}{1em}
 
 \begin{kblock}[text]
